Add reverse profile option, switch to sondehub tawhiri instance

--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
             <td><select id="flight_profile">
                 <option value="standard_profile" selected="selected">Standard</option>
                 <option value="float_profile">Float</option>
+                <option value="reverse_profile">Reverse (ascent only)</option>
             </select></td>
         </tr>
         <tr>
